--- a/MyCalendarDemo/res/values/strings.xml
+++ b/MyCalendarDemo/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="writeit">随手记两笔...</string>
     <string name="activity_add_event_save">保存</string>
     <string name="contentisnull">内容不能为空</string>
+    <string name="addview">添加</string>
 
 </resources>
