设置搜索入口

--- a/MyCalendarDemo/res/values/strings.xml
+++ b/MyCalendarDemo/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="activity_add_event_save">保存</string>
     <string name="contentisnull">内容不能为空</string>
     <string name="addview">添加</string>
+    <string name="setting">设置</string>
+    <string name="search">搜索</string>
 
 </resources>
