--- a/MyCalendarDemo/res/values/strings.xml
+++ b/MyCalendarDemo/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="setting">设置</string>
     <string name="search">搜索</string>
     <string name="YES">确定</string>
+    <string name="set">设定</string>
+    <string name="Cancel">取消</string>
 
 </resources>
